recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: type mismatch;
 found   : Double
 required: Int
var x:Int=getX()
              ^Tree:6: error: type mismatch;
 found   : Double
 required: Int
var y:Int=getY()
              ^